# recon

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT-STATE-ANALYSIS.md  LICENSE  PROGRESS-LOG.md  QUALITY-RUBRIC.md  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  THIRD-PARTY-NOTICES.md  cosmic-ray-v199.toml  mutation.toml  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  fingerprint_request.md  fingerprint_request.yml  idea.md
.github/PULL_REQUEST_TEMPLATE/: fingerprint.md
.github/workflows/: ci.yml  clusterfuzzlite.yml  codeql.yml  mutation.yml  provider-drift.yml  release.yml  scorecard.yml  secrets-scan.yml
agents/: README.md
agents/claude-code/: README.md
agents/cursor/: README.md
agents/kiro/: README.md  mcp.json
agents/vscode/: README.md  mcp.json
agents/windsurf/: README.md  mcp_config.json
claude-code/: .mcp.json  README.md
claude-code/.claude-plugin/: plugin.json
clients/: README.md
docs/: README.md  agentic-balance.md  aggregate-state.md  archive-readiness.md  artifact-review.md  assurance-case.md  automation-examples.md  bayesian-cpt-discipline.md  c3-ct-validation-plan.md  catalog-strategy.md  claim-contracts.md  cli-surface.md  correlation.md  data-handling-policy.md  engineering-practices.md  engineering-refinement-plan.md  external-writeup-plan.md  fingerprints.md  getting-started.md  how-it-works.md  legal.md  limitations.md  m365-tenancy-decision.md  maintainer-loop-runbook.md  maintainer-validation.md  mcp-2026-07-28-readiness.md  mcp.md  migration-v2.md  openssf-badge-readiness.md  openssf-posture.md  operational-contract.md  paper-claim-map.md  paper-draft.md  paper-figures.md  paper-outline.md  performance.md  public-label-snapshot-decision.md  recon-schema.json  related-work.md  release-process.md  (+16 more)
examples/: README.md  sample-batch.txt  sample-output.json
fuzz/: recon_input_fuzzer.py
recon_tool/: __init__.py  absence.py  bayesian.py  bayesian_dag.py  cache.py  chain.py  cli.py  cli_batch.py  cli_doctor.py  cli_fingerprints.py  cli_lookup.py  cli_shared.py  cli_signals.py  client_doctor.py  clustering.py  cohort_summary.py  constants.py  ct_cache.py  delta.py  discovery.py  ecosystem.py  explanation.py  exposure.py  exposure_models.py  fingerprint_audit.py  fingerprint_validator.py  fingerprints.py  formatter.py  formatter_classify.py  formatter_classify_tables.py  formatter_exposure.py  formatter_markdown.py  fusion.py  http.py  infra_graph.py  insights.py  lexical.py  mcp_doctor.py  mcp_install.py  merger.py  (+21 more)
scripts/: characterize_performance.py  check.py  check_clusterfuzzlite_requirements.py  check_cost_surface.py  check_file_size.py  check_fingerprint_freshness.py  check_interface_layout.py  check_markdown_links.py  check_mcp_compatibility.py  check_metadata_coverage.py  check_no_experimental_labels.py  check_paper_claims.py  check_plr_ratchet.py  check_release_channel_parity.py  check_release_recovery.py  check_schema_sources.py  check_section_links.py  check_text_hygiene.py  check_traceability.py  check_validation_hygiene.py  check_workflow_pins.py  diff_coverage.py  finalize_sbom.py  generate_fingerprint_catalog.py  generate_paper_figures.py  generate_schema.py  generate_surface_inventory.py  install.ps1  install.sh  mutation_floor.py  release.py  release_readiness.py  run_dependency_audit.py  split_fingerprints.py  summarize_cli_surface_changes.py  update_homebrew_formula.py  validate_fingerprint.py  validate_release_tag.py
tests/: README.md  cache_path_helpers.py  conftest.py  test_absence_engine.py  test_adversarial_properties.py  test_adversarial_render.py  test_agentic_balance_docs.py  test_agentic_ux.py  test_agentic_ux_compatibility.py  test_aggregate_state_reducer.py  test_annotation_introspection.py  test_archive_readiness_docs.py  test_artifact_review_docs.py  test_automation_examples.py  test_backward_compat.py  test_baseline_anomalies.py  test_batch.py  test_batch_ndjson_schema.py  test_batch_stdin.py  test_batch_streaming.py  test_bayesian_canonical.py  test_bayesian_collection_missingness.py  test_bayesian_dag.py  test_bayesian_differential.py  test_bayesian_evidence_groups.py  test_bayesian_fusion.py  test_bayesian_fuzz.py  test_bayesian_hypothesis.py  test_bayesian_inference.py  test_bayesian_loader_edges.py  test_bayesian_masked_units.py  test_bayesian_network_invariants.py  test_bayesian_sensitivity.py  test_bayesian_topology.py  test_bayesian_unit_math.py  test_bayesian_v193_topology.py  test_bayesian_validation_rounds.py  test_bimi_vmc.py  test_build_constraints.py  test_cache_cli.py  (+269 more)
validation/: 2026-06-02-calibration.md  2026-06-04-case-study-spot-check.md  2026-06-19-crowdstrike-match-mode.md  2026-06-19-msedge-triad-motif.md  2026-06-19-paper-reproduction-smoke.md  2026-06-19-supabase-cname-target.md  2026-06-23-full-corpus-calibration.md  2026-06-25-squarespace-ext-sq.md  2026-06-25-ultradns-web-forwarding.md  2026-06-26-c3-ct-partial.md  2026-06-26-onmicrosoft-suffix-match.md  2026-06-28-adversarial-perturbation-paper.md  2026-06-28-final-claim-audit.md  2026-06-28-full-corpus-calibration-refresh.md  2026-06-28-hybrid-interval-paper.md  2026-06-28-hybrid-interval-smoke.md  2026-06-29-final-claim-audit-refresh.md  2026-06-29-scorecard-gate-claim-audit.md  2026-06-29-submission-freeze-local-proof.md  2026-06-30-submission-freeze-local-proof.md  2026-07-17-typed-catalog-baseline.md  README.md  __init__.py  adversarial_properties.py  agentic_ux_v199_runbook.md  analyze_v19_4_hardened.py  analyze_v19_calibration.py  audit_fingerprints.py  cal14-missingness-design.md  cal8-likelihood-sensitivity.md  calibration_estimators.py  catalog_baseline.py  compute_node_stability.py  conformal_coverage.py  corpus-example.txt  corpus_aggregator.py  coverage_gap_audit.md  diff_runs.py  differential_verification.py  drift_check.py  (+53 more)
(+343 files in other folders)
