[project]
name = "recon-tool"
version = "0.1.2"
description = "Domain intelligence CLI and MCP server — tech stack, email security, and signal intelligence from DNS."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "dnspython>=2.6",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7",
]

[project.scripts]
recon = "recon_tool.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recon_tool"]

[tool.hatch.build.targets.wheel.force-include]
"recon_tool/data" = "recon_tool/data"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: tests that hit real network endpoints (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S", "PT", "PLW"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "S101"]  # allow assert in tests

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
# Global reportUnknown* suppressions — needed across multiple files, not just YAML loaders.
# Root causes: (1) yaml.safe_load returns Any, propagating through fingerprints.py and
# signals.py; (2) dnspython's type stubs are incomplete (dns.py); (3) urllib.parse.urlparse
# returns untyped path components (oidc.py); (4) downstream Any propagation into formatter.py,
# cli.py, and insights.py. Per-file overrides were evaluated but 7 files are affected —
# the global suppression is the pragmatic choice until upstream stubs improve.
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
