[project]
name = "recon-tool"
version = "1.9.10"
description = "Domain intelligence CLI and MCP server — tech stack, email security, and signal intelligence from DNS."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["dns", "osint", "recon", "domain-intelligence", "mcp", "security", "saas-fingerprinting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "dnspython>=2.6",
    "pyyaml>=6.0",
    "defusedxml>=0.7",
    "mcp>=1.0",
    "networkx>=3.0",
    # Security floor on a transitive dependency: mcp pulls in python-multipart,
    # and 0.0.26 has CVE-2026-42561 (fix: 0.0.27). Pinned here so resolvers and
    # `pip-audit` stay green until mcp's own floor catches up.
    "python-multipart>=0.0.27",
]

[project.scripts]
recon = "recon_tool.cli:run"

[project.urls]
Homepage = "https://github.com/blisspixel/recon"
Repository = "https://github.com/blisspixel/recon"
Changelog = "https://github.com/blisspixel/recon/blob/main/CHANGELOG.md"
Issues = "https://github.com/blisspixel/recon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recon_tool"]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "pyright>=1.1",
    "pre-commit>=3.0",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: tests that hit real network endpoints (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Rule selection rationale:
#   E, F, W — pycodestyle / pyflakes baseline
#   I       — import sorting (isort)
#   UP      — pyupgrade; keeps syntax current to target-version
#   B       — flake8-bugbear; real-bug patterns (mutable defaults, unused
#             loop vars, raise-without-from, etc.)
#   SIM     — flake8-simplify; collapses verbose idioms
#   S       — bandit-via-ruff; security-adjacent lints
#   PT      — pytest style
#   PLW    — pylint warnings
#   RUF     — ruff-native rules; small quality wins
#   C4      — comprehension improvements
#   PIE     — misc improvements (no-self-assign, unused-star, etc.)
#   RET     — return-statement cleanup
#   G       — logging-format sanity
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S", "PT", "PLW", "RUF", "C4", "PIE", "RET", "G"]
# We deliberately use em-dashes (—) and smart quotes in docstrings and
# user-facing strings; ruff's ambiguous-unicode warnings are noise in
# our prose-heavy comments.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "S101"]  # allow assert in tests

[tool.bandit]
# Bandit duplicates ruff's S-rules. We keep bandit available for
# defense-in-depth (it catches a few niche patterns ruff doesn't) but
# skip the three IDs we've already reviewed and suppressed at the
# ruff level with ``# noqa: S...`` annotations — otherwise every run
# shows the same nine already-handled findings.
#
# B311 — ``random.choice(_STATUS_MESSAGES)`` for spinner text. Not
#        cryptographic; the Python doc itself says ``random`` is fine
#        for non-security uses.
# B404 — ``import subprocess`` in cli.py for the ``fingerprints check``
#        wrapper. Used only to invoke our own validator script with a
#        Path object argument.
# B603 — ``subprocess.run(cmd, check=False)`` — same call site as B404.
#        No shell, no user-controlled command parts, Path is validated
#        with ``.exists()`` before invocation.
# B405 — ``import xml.etree.ElementTree as ET`` in userrealm.py. Only
#        referenced for the ``ET.ParseError`` exception class; actual
#        parsing uses ``defusedxml.ElementTree.fromstring`` one line
#        above the ``except`` clause.
# B406 — ``from xml.sax.saxutils import escape`` in userrealm.py. Used
#        for escaping OUTGOING request bodies (we're writing XML, not
#        parsing untrusted XML).
exclude_dirs = ["tests", ".venv", "dist", "build"]
skips = ["B311", "B404", "B603", "B405", "B406"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
# Resolve imports through the local checkout's editable install in
# .venv rather than any stale user-site install elsewhere on the
# system. Without these, ``python -m pyright .`` can pick up a
# previously-released recon-tool wheel from ~/AppData/Roaming/Python
# and report phantom "no parameter named X" errors against schema
# additions that only exist in the working copy.
venv = ".venv"
venvPath = "."
include = ["recon_tool", "tests", "validation/corpus_aggregator.py"]
# Global reportUnknown* suppressions — needed across multiple files, not just YAML loaders.
# Root causes: (1) yaml.safe_load returns Any, propagating through fingerprints.py and
# signals.py; (2) dnspython's type stubs are incomplete (dns.py); (3) urllib.parse.urlparse
# returns untyped path components (oidc.py); (4) downstream Any propagation into formatter.py,
# cli.py, and insights.py. Per-file overrides were evaluated but 7 files are affected —
# the global suppression is the pragmatic choice until upstream stubs improve.
reportMissingTypeStubs = false
# networkx ships its type info via stubs but pyright still warns on
# "could not be resolved from source" when only the wheel is
# installed (no source distribution alongside). The stubs are
# sufficient for our purposes.
reportMissingModuleSource = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false

# Test-only relaxations. Tests legitimately reach into private APIs for
# white-box behavior verification, omit parameter annotations on fixtures
# that pytest injects by name (`mock_resolve`, `tmp_path`, etc.), and use
# untyped test-helper `_fixture` methods. Production code stays strict.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
reportMissingParameterType = "none"
reportUnusedFunction = "none"
reportMissingTypeArgument = "none"
reportArgumentType = "none"
reportOperatorIssue = "none"
reportIndexIssue = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"
